--- a/media.html
+++ b/media.html
@@ -80,6 +80,23 @@ header-img: "img/bg3.jpg"
 </html>
 
 
+<table width="400" height="311" border="0">
+  <tr>
+    <td width="397"><div align="center">五星體育</div></td>
+  </tr>
+  <tr>
+    <td height="237"><a href="http://huaweicdn.hb.chinamobile.com/PLTV/2510088/224/3221225772/index.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/5S.jpg" width="400" height="400" /></a></td>
+  </tr>
+  <tr>
+    <td><div align="center">備用更新</div></td>
+  </tr>
+</table>
+</body>
+</html>
+
+
+
+
 
 <table width="400" height="311" border="0">
   <tr>
@@ -134,7 +151,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">TVB</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://qqpull.inke.cn/live/1530340554303998.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://pulllive-al.wasu.cn/live/e89fe45634d368c1d2c45773866aea80.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
@@ -150,7 +167,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">無綫新聞</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://edge20-1.edgeware.hk4.tvb.com/session/094fe130-7a63-11e8-8c85-005056b12cf7/qh33qv/newslive/smil:mobilehd_inews.smil/playlist.m3u8?token=45281539cb0216bad321013f1e60e65c_1530229041_1530229041"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://edge20-1.edgeware.hk4.tvb.com/session/73a04d16-80aa-11e8-8610-005056b12cf7/qh33qv/newslive/smil:mobilehd_inews.smil/playlist.m3u8?token=a43dff0e4eee5aeb5e48de9b94ed6baf_1530919420_1530919420"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
