--- a/media.html
+++ b/media.html
@@ -103,7 +103,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">CCTV-5</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://124.224.238.170/PLTV/88888888/224/3221225890/10000100000000060000000000725782_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://ivi.bupt.edu.cn/hls/cctv5hd.m3u8?"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">需要長按複製連接到播放器</div></td>
@@ -166,7 +166,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">TVB</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://pulllive-al.wasu.cn/live/274856deb4a87918ca5c56ef0432cf31.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://pulllive-al.wasu.cn/live/d57f089a20d56d75c2a91a64e24971cd.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新，香港版</div></td>
@@ -199,7 +199,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">ViuTV</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="rtmp://al1-hls.live.huajiao.com:1935/live/1529956598?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="rtmp://al3-flv.live.huajiao.com:1935/live/1530815750?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
