--- a/help.html
+++ b/help.html
@@ -1,28 +1,25 @@
 ---
 layout: page
-title: "About"
+title: "Help"
 description: "Hey, this is Hux."
 header-img: "img/about-bg-walle.jpg"
 multilingual: true
 ---
 
-<!-- Language Selector -->
-<select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英文 English </option>
-</select>
-
-<!-- Chinese Version -->
-<div class="zh post-container">
-    {% capture about_zh %}{% include about/zh.md %}{% endcapture %}
-    {{ about_zh | markdownify }}
-</div>
-
-<!-- English Version -->
-<div class="en post-container">
-    {% capture about_en %}{% include about/en.md %}{% endcapture %}
-    {{ about_en | markdownify }}
-</div>
+<body>
+<table width="397" height="400" border="0">
+  <tr>
+    <td><p>以Android系統示範使用視頻源</p>
+      <p>1、安裝MXPlayer（<a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/MXPlayerPro-1.9.23_Signed.apk">下載</a>）</p>
+    <p>2、打開我的視頻源分享頁（<a href="https://hbpoon.github.io/media/">HB Blog</a>）</p>
+    <p>3、若源無提示要複製連結的，直接點擊即可播放</p>
+    <p>4、視頻源下提示複製連結打開的，長按圖片複製連結地址（不是圖片連結）</p>
+    <p>5、打開MXPlyer，點擊右上角三個點的選項，選擇第一個選項</p>
+    <p>6、粘貼剛才複製的網址，點擊確定即可播放</p></td>
+  </tr>
+</table>
+</body>
+</html>
 
 
 {% if site.disqus_username %}
