--- a/help.html
+++ b/help.html
@@ -1,9 +1,8 @@
 ---
 layout: page
 title: "Help"
-description: "Hey, this is Hux."
-header-img: "img/about-bg-walle.jpg"
-multilingual: true
+description: ""
+header-img: "img/bg4.jpg"
 ---
 
 <body>
