--- a/media.html
+++ b/media.html
@@ -16,9 +16,16 @@ header-img: "img/bg3.jpg"
 <p>
 </head>
 
+
+<body>
+<a href="https://hbpoon.github.io/help/">視頻源使用方法
+</a>
+</body>
+</html>
 <p>
 <body>
 
+    
 <table width="400" height="311" border="0">
   <tr>
     <td width="397"><div align="center">廣東體育</div></td>
@@ -43,7 +50,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE2.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">世界盃直播期間冇信號，需要長按複製連接到播放器</div></td>
+    <td><div align="center">世界盃直播期間冇信號，需要長按複製連結到播放器</div></td>
   </tr>
 </table>
 </body>
@@ -106,7 +113,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://ivi.bupt.edu.cn/hls/cctv5hd.m3u8?"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">需要長按複製連接到播放器</div></td>
+    <td><div align="center">需要長按複製連結到播放器</div></td>
   </tr>
 </table>
 </body>
@@ -121,7 +128,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5p.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">需要長按複製連接到播放器</div></td>
+    <td><div align="center">需要長按複製連結到播放器</div></td>
   </tr>
 </table>
 </body>
@@ -166,7 +173,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">TVB</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://pulllive-al.wasu.cn/live/d57f089a20d56d75c2a91a64e24971cd.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://pulllive-al.wasu.cn/live/db0c381015979e176ce3259a106ad7ad.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新，香港版</div></td>
@@ -182,7 +189,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">無綫新聞</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://edge20-1.edgeware.hk4.tvb.com/session/73a04d16-80aa-11e8-8610-005056b12cf7/qh33qv/newslive/smil:mobilehd_inews.smil/playlist.m3u8?token=a43dff0e4eee5aeb5e48de9b94ed6baf_1530919420_1530919420"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://edge26-1.edgeware.hk4.tvb.com/session/4d1b28c6-862e-11e8-b613-005056b1026a/dtysfd/newslive/smil:mobilehd_inews.smil/playlist.m3u8?token=217b5f7f981dcbbe380a99383e2a263d_1531525805_1531525805"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
@@ -199,7 +206,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">ViuTV</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="rtmp://al3-flv.live.huajiao.com:1935/live/1530815750?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="rtmp://al3-flv.live.huajiao.com:1935/live/1530551287?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
@@ -386,7 +393,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://125.88.94.135:30001/PLTV/88888905/224/3221227997/10000100000000060000000006912176_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/L4K.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">需要長按複製連接到播放器</div></td>
+    <td><div align="center">需要長按複製連結到播放器</div></td>
   </tr>
 </table>
 </body>
