--- a/help.html
+++ b/help.html
@@ -6,14 +6,14 @@ header-img: "img/bg4.jpg"
 ---
 
 <body>
-<table width="440" height="440" border="0">
+<table width="397" height="440" border="0">
   <tr>
     <td><p>以Android系統示範使用視頻源</p>
       <p>1、安裝MXPlayer（<a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/MXPlayerPro-1.9.23_Signed.apk"><strong>下載</strong></a>）</p>
       <p>2、打開我的視頻源分享頁（<a href="https://hbpoon.github.io/media/"><strong>HB Blog</strong></a>）</p>
-      <p>3、若源無提示要複製連結的，直接點擊即可播放</p>
-      <p>4、視頻源下提示複製連結打開的，長按圖片複製連結地址</p>
-      <p>5、打開MXPlyer點擊右上角三個點的選項，選擇第一個選項</p>
+      <p>3、無提示要複製連結的，直接點擊即可播放</p>
+      <p>4、若提示複製連結打開，長按圖片複製連結地址</p>
+      <p>5、打開MXPlyer點擊右上角的三個點，選擇第一個選項</p>
       <p>6、粘貼剛才複製的網址，點擊確定即可播放</p>
     <p>視頻源可能不穩定甚至失效</p></td>
   </tr>
