--- a/help.html
+++ b/help.html
@@ -13,9 +13,10 @@ header-img: "img/bg4.jpg"
       <p>2、打開我的視頻源分享頁（<a href="https://hbpoon.github.io/media/"><strong>HB Blog</strong></a>）</p>
       <p>3、無提示要複製連結的，直接點擊即可播放</p>
       <p>4、若提示複製連結打開，長按圖片複製連結地址</p>
-      <p>5、打開MXPlyer點擊右上角的三個點，選擇第一個選項</p>
-      <p>6、粘貼剛才複製的網址，點擊確定即可播放</p>
-    <p>視頻源可能不穩定甚至失效</p></td>
+      <p>5、打開MXPlyer點擊右上角的三個點</p>
+      <p>6、選擇第一個選項</p>
+      <p>7、粘貼剛才複製的網址，點擊確定即可播放</p>
+      <p>8、視頻源可能不穩定甚至失效</p></td>
   </tr>
 </table>
 <p>&nbsp;</p>
