--- a/media.html
+++ b/media.html
@@ -173,7 +173,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">TVB</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://pulllive-al.wasu.cn/live/db0c381015979e176ce3259a106ad7ad.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://pulllive-al.wasu.cn/live/6b2a7a73ec397ee09a13b48be018c408.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新，香港版</div></td>
@@ -189,7 +189,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">無綫新聞</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://edge26-1.edgeware.hk4.tvb.com/session/4d1b28c6-862e-11e8-b613-005056b1026a/dtysfd/newslive/smil:mobilehd_inews.smil/playlist.m3u8?token=217b5f7f981dcbbe380a99383e2a263d_1531525805_1531525805"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://pulllive-al.wasu.cn/live/9f95fe255033fa6ae46fa5c3d8a54d00.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
