--- a/media.html
+++ b/media.html
@@ -33,7 +33,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">ViuTV</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="rtmp://al3-flv.live.huajiao.com:1935/live/1530551287?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="rtmp://al3-flv.live.huajiao.com:1935/live/1531493855?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">HK世界杯直播1080P無延遲，推薦！</div></td>
@@ -178,7 +178,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">TVB</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://pulllive-al.wasu.cn/live/c89058c8cabc33560ef4743306a051cc.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://pulllive-al.wasu.cn/live/5c0d9ee9650f327dcbcaca18ed31c457.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新，香港版</div></td>
@@ -194,7 +194,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">無綫新聞</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://pulllive-al.wasu.cn/live/9f95fe255033fa6ae46fa5c3d8a54d00.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://edge20-1.edgeware.hk4.tvb.com/session/bfc36936-87d4-11e8-9dad-0050569023d7/qh33qv/newslive/smil:mobilehd_inews.smil/playlist.m3u8?token=bc263d05530ed89bc1ca524b2518b348_1531707245_1531707245"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
