--- a/help.html
+++ b/help.html
@@ -10,13 +10,14 @@ header-img: "img/bg5.jpg"
   <tr>
     <td><p>以Android系統示範使用視頻源</p>
       <p>1、安裝MXPlayer（<a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/MXPlayerPro-1.9.23_Signed.apk"><strong>下載</strong></a>）</p>
-      <p>2、打開我的視頻源分享頁（<a href="https://hbpoon.github.io/media/"><strong>HB Blog</strong></a>）</p>
+      <p>2、用打開我的視頻源分享頁（<a href="https://hbpoon.github.io/media/"><strong>HB Blog</strong></a>）</p>
       <p>3、無提示要複製連結的，直接點擊即可播放</p>
       <p>4、若提示複製連結打開，長按圖片複製連結地址</p>
       <p>5、打開MXPlyer點擊右上角的三個點</p>
       <p>6、選擇第一個選項</p>
-      <p>7、粘貼剛才複製的網址，點擊確定即可播放</p>
-      <p>8、視頻源可能不穩定甚至失效</p></td>
+      <p>7、推薦使用Chrome，其他瀏覽器可能不支持跳轉播放</p>
+      <p>8、粘貼剛才複製的網址，點擊確定即可播放</p>
+      <p>9、視頻源可能不穩定甚至失效</p></td>
   </tr>
 </table>
 <p>&nbsp;</p>
