--- a/help.html
+++ b/help.html
@@ -15,9 +15,9 @@ header-img: "img/bg5.jpg"
       <p>4、若提示複製連結打開，長按圖片複製連結地址</p>
       <p>5、打開MXPlyer點擊右上角的三個點</p>
       <p>6、選擇第一個選項</p>
-      <p>7、推薦使用Chrome，其他瀏覽器可能不支持跳轉播放</p>
-      <p>8、粘貼剛才複製的網址，點擊確定即可播放</p>
-      <p>9、視頻源可能不穩定甚至失效</p></td>
+      <p>7、粘貼剛才複製的網址，點擊確定即可播放</p>
+      <p>*、推薦使用chrome打開連結</p>
+      <p>*、視頻源可能不穩定甚至失效</p></td>
   </tr>
 </table>
 <p>&nbsp;</p>
