--- a/media.html
+++ b/media.html
@@ -33,7 +33,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">ViuTV</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="rtmp://bililive.kksmg.com:1935/qxlive/06994d75298c99c51ad1f1926181e91c?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="rtmp://al3-flv.live.huajiao.com:1935/live/1530693798?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">HK世界杯直播1080P無延遲，推薦！</div></td>
