--- a/media.html
+++ b/media.html
@@ -162,7 +162,7 @@ header-img: "img/bg3.jpg"
     <td width="397"><div align="center">翡翠台2</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&FvSeid=&Pcontent_id=&Provider_id=&Fsv_chan_hls_se_idx=30"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvb.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://m.567it.com/jade.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvb.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不穩定，廣東版</div></td>
