--- a/media.html
+++ b/media.html
@@ -40,7 +40,15 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">延遲，世界盃直播期間可能無法播放
+    <td><div align="center"><input type="text" size="30" id="url" value="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil">
+<script type="text/javascript">
+function copyUrl(){
+ var url = document.getElementById("url").value;
+ window.clipboardData.setData("Text",url);
+ alert("复制链接成功！");
+}
+</script>
+<input type="button" value="复制链接" onClick="url.select();document.execCommand('Copy')">
     </div></td>
   </tr>
 </table>
@@ -55,7 +63,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://116.199.5.51:8114/00000000/index.m3u8?Fsv_cid=&Fsv_chan_hls_se_idx=15&Fsv_ctype=LIVES&version=&Fsv_rate_id=&Fsv_otype=&FvSeid=&Pcontent_id=&Provider_id=&Fsv_filetype=&Fsv_ShiftEnable=&Fsv_SV_PARAM1=&Fsv_ShiftTsp=&Fsv_CMSID=&AuthInfo"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">不定期更新</div></td>
+    <td><div align="center">有延遲</div></td>
   </tr>
 </table>
 </body>
@@ -70,7 +78,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://116.199.5.51:8114/LIVES/index.m3u8?Fsv_otype=1&amp;FvSeid=&amp;Pcontent_id=&amp;Provider_id=&amp;Fsv_chan_hls_se_idx=15"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">世界盃直播期間冇信號，需要長按複製連結到播放器</div></td>
+    <td><div align="center">有延遲</div></td>
   </tr>
 </table>
 </body>
@@ -106,7 +114,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://223.110.243.149/PLTV/3/224/3221227166/index.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">需要長按複製連結到播放器</div></td>
+    <td><div align="center">穩定</div></td>
   </tr>
 </table>
 </body>
@@ -121,7 +129,15 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5p.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">需要長按複製連結到播放器</div></td>
+    <td><div align="center"><input type="text" size="30" id="url" value="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil">
+<script type="text/javascript">
+function copyUrl(){
+ var url = document.getElementById("url").value;
+ window.clipboardData.setData("Text",url);
+ alert("复制链接成功！");
+}
+</script>
+<input type="button" value="复制链接" onClick="url.select();document.execCommand('Copy')">
   </tr>
 </table>
 </body>
@@ -139,7 +155,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://116.199.5.51:8114/00000000/2e368e04c76446bc9d30ca7a9f934dae/index.m3u8?Fsv_cid=1034&Fsv_chan_hls_se_idx=30&Fsv_ctype=LIVES&version=9&Fsv_rate_id=1&Fsv_otype=1&FvSeid=5abd1660af1babb4&Pcontent_id=7f88be5fb6fd426494f6aa240f1dc7a9&Provider_id=00000000&Fsv_filetype=1&Fsv_ShiftEnable=0&Fsv_SV_PARAM1=0&Fsv_ShiftTsp=240&Fsv_CMSID=00000000&AuthInfo=P2ZSH2gNMZ8aiVfV%2BjCYczoGsAYoDo4KY5I3eHfJhGTKdSzgLwCHoSet9it9fXrMLwehJxh9gmO%2F%0AOFrWyxI%2BtteLTJnZKT7Lg8BRYQNXMQU%3D%0A"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvb.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">不穩定，廣東版</div></td>
+    <td><div align="center">廣東版</div></td>
   </tr>
 </table>
 </body>
@@ -153,7 +169,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://m.567it.com/jade.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvb.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">不穩定，廣東版</div></td>
+    <td><div align="center">廣東版</div></td>
   </tr>
 </table>
 </body>
@@ -198,6 +214,21 @@ header-img: "img/bg3.jpg"
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
+  </tr>
+</table>
+</body>
+</html>
+
+
+<table width="400" height="311" border="0">
+  <tr>
+    <td width="397"><div align="center">奇妙電視</div></td>
+  </tr>
+  <tr>
+    <td height="237"><a href="http://media.fantv.hk/m3u8/archive/channel2.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
+  </tr>
+  <tr>
+    <td><div align="center">穩定</div></td>
   </tr>
 </table>
 </body>
