--- a/media.html
+++ b/media.html
@@ -40,7 +40,7 @@ header-img: "img/bg3.jpg"
     <td height="237"><a href="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center"><input type="text" size="30" id="url" value="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil">
+    <td><div align="center"><input type="text" size="20" id="url" value="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil">
 <script type="text/javascript">
 function copyUrl(){
  var url = document.getElementById("url").value;
@@ -129,7 +129,7 @@ function copyUrl(){
     <td height="237"><a href="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5p.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center"><input type="text" size="30" id="url" value="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil">
+    <td><div align="center"><input type="text" size="20" id="url" value="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil">
 <script type="text/javascript">
 function copyUrl(){
  var url = document.getElementById("url").value;
@@ -225,7 +225,7 @@ function copyUrl(){
     <td width="397"><div align="center">奇妙電視</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://media.fantv.hk/m3u8/archive/channel2.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://media.fantv.hk/m3u8/archive/channel2.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/FANTV.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">穩定</div></td>
