--- a/movie.html
+++ b/movie.html
@@ -4,6 +4,24 @@ title: "Movie"
 description: ""
 header-img: "img/bg5.jpg"
 ---
+
+<!-- Language Selector -->
+<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+    <option value="0" selected> 中文 Chinese </option>
+    <option value="1"> 英文 English </option>
+</select> -->
+
+<!-- Chinese Version -->
+<div class="zh post-container">
+<p>
+</head>
+
+
+
+    
+    
+<table width="400" height="311" border="0">
+  <tr>
 <body>
 <table width="400" height="311" border="0" align="center">
   <tr>
