Update and rename media.html to iptv.html

--- a/iptv.html
+++ b/iptv.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "Media"
+title: "IPTV"
 description: ""
-header-img: "img/bg3.jpg"
+header-img: "img/bg5.jpg"
 ---
 
 <!-- Language Selector -->
