--- a/movie.html
+++ b/movie.html
@@ -26,7 +26,7 @@ header-img: "img/bg5.jpg"
     <td height="237"><a href="https://vip888.kuyun99.com/ppvod/FBF9C04BB48ABDADC4B05DFD607A647A.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/m1xhssf.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">粵語720P</div></td>
+    <td><div align="center">國語TS</div></td>
   </tr>
 </table>
 </body>
