--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@ title: "About"
 description: "Hey, this is HB."
 header-img: "img/bg1.jpg"
 ---
-<EMBED src="http://dl.stream.qqmusic.qq.com/M800003TN3vS3T18c2.mp3?vkey=93662A7C0BB0025F1843FF41FE203411D4AFF88C6C606D5142DA01F10DF0BC876CBE9BDCB7CA9878BC8C66689B195612CB35D16690179DAE&guid=5150825362&fromtag=1" autostart="true" loop="true" width="0" height="0">
+<embed src="http://dl.stream.qqmusic.qq.com/M800003TN3vS3T18c2.mp3?vkey=93662A7C0BB0025F1843FF41FE203411D4AFF88C6C606D5142DA01F10DF0BC876CBE9BDCB7CA9878BC8C66689B195612CB35D16690179DAE&guid=5150825362&fromtag=1" autostart="true" loop="true" width="200" height="150" >
+
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
     <option value="0" selected> 中文 Chinese </option>
