--- a/about.html
+++ b/about.html
@@ -14,14 +14,16 @@ header-img: "img/bg1.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-   <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
-    一名技術宅</p></blockquote>
+    <!--copied from markdown -->
+    <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
+    一名技術宅</p>
 <h5>Contact</h5>
-    <p><strong>Wechat:</strong><a href="http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg">Heaven-Pan</a> <p><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> 
-    <p><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a> 
-    <p>
+    <p><strong>Wechat:</strong><a href="http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg">Heaven-Pan</a> <p> 
+    <p><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
+    <p><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a> <p></blockquote>
     <p></p>
 </div>
+
 
 
 
