--- a/about.html
+++ b/about.html
@@ -17,7 +17,9 @@ header-img: "img/bg1.jpg"
     <!--copied from markdown -->
     <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
     一名技術宅</p>
-<h5>Contact</h5>
+    <h5>基本信息</h5>
+    <p><strong>所在地:</strong><a href="www.google.cn/maps/place/广东省广州市">廣州</a> <p>
+    <h5>聯繫方式</h5>
     <p><strong>Wechat:</strong><a href="http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg">Heaven-Pan</a> <p> 
     <p><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
     <p><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a> <p></blockquote>
