--- a/about.html
+++ b/about.html
@@ -4,7 +4,14 @@ title: "About"
 description: "Hey, this is HB."
 header-img: "img/bg1.jpg"
 ---
+<!-- Language Selector -->
+<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+    <option value="0" selected> 中文 Chinese </option>
+    <option value="1"> 英文 English </option>
+</select> -->
 
+<!-- Chinese Version -->
+<div class="zh post-container">
 
  
     <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
@@ -22,3 +29,15 @@ header-img: "img/bg1.jpg"
 
 
 
+<!-- English Version -->
+<!-- <div class="en post-container">
+    <blockquote><p>Yet another iOS Developer. <br>
+    Yet another Life-long Student.</p></blockquote>
+    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
+    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
+    
+    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
+    <h5>Talks</h5>
+    <ul>
+    <li><a href="https://github.com">GitHub</a></li>
+    <li><a href="http://
