--- a/iptv.html
+++ b/iptv.html
@@ -425,7 +425,7 @@ function copyUrl(){
     <td width="397"><div align="center">鬆視-2</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://59.124.220.46:554/live/tv284198321.stream/index.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvs5.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://59.124.220.46:554/live/tv284198321.stream/index.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/ss2.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不穩定</div></td>
