--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 description: "如果很怕黑，就比黑更黑"
 ---
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=520 src="//music.163.com/outchain/player?type=0&id=517171111&auto=1&height=430"></iframe>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=520 align="center" src="//music.163.com/outchain/player?type=0&id=517171111&auto=1&height=430"></iframe>
 
 
     {% for post in paginator.posts %}
