--- a/about.html
+++ b/about.html
@@ -13,7 +13,9 @@ header-img: "img/bg1.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
 
- <div><embed height="0" allownetworking="internal" width="0" allowscriptaccess="never" loop="-1" invokeurls="false" src="http://dl.stream.qqmusic.qq.com/M800003TN3vS3T18c2.mp3?vkey=93662A7C0BB0025F1843FF41FE203411D4AFF88C6C606D5142DA01F10DF0BC876CBE9BDCB7CA9878BC8C66689B195612CB35D16690179DAE&guid=5150825362&fromtag=1" type="audio/mpeg" wmode="transparent"><br/></div>
+<audio autoplay="autoplay">
+  <source src="http://dl.stream.qqmusic.qq.com/M800003TN3vS3T18c2.mp3?vkey=93662A7C0BB0025F1843FF41FE203411D4AFF88C6C606D5142DA01F10DF0BC876CBE9BDCB7CA9878BC8C66689B195612CB35D16690179DAE&guid=5150825362&fromtag=1" />
+</audio>
 
     <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
     <h5>基本信息</h5>
