--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@ layout: page
 description: "如果很怕黑，就比黑更黑"
 ---
 
+
+
+<!-- Language Selector -->
+<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+    <option value="0" selected> 中文 Chinese </option>
+    <option value="1"> 英文 English </option>
+</select> -->
+
+<!-- Chinese Version -->
+<div class="zh post-container">
+
+
+
+
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=520 align="center" src="//music.163.com/outchain/player?type=0&id=517171111&auto=1&height=430"></iframe>
 
 
