--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ header-img: "img/bg1.jpg"
 <div class="zh post-container">
 
 <audio autoplay="autoplay">
-  <source src="http://dl.stream.qqmusic.qq.com/M800003TN3vS3T18c2.mp3?vkey=93662A7C0BB0025F1843FF41FE203411D4AFF88C6C606D5142DA01F10DF0BC876CBE9BDCB7CA9878BC8C66689B195612CB35D16690179DAE&guid=5150825362&fromtag=1" />
+  <source src="http://dl.stream.qqmusic.qq.com/C400003TN3vS3T18c2.m4a?vkey=D113DD94A72AE9340F0DE625FE1F8A0DFCF9B50716FEF99B67252C5C22469CE8742AF8A24DF8CE04899450D2490C79556395769BB660C2B4&guid=1958059210&uin=0&fromtag=66" />
 </audio>
 
     <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
