--- a/iptv.html
+++ b/iptv.html
@@ -17,7 +17,11 @@ header-img: "img/bg5.jpg"
 </head>
 
 
-
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<title>点击复制链接</title>
+</head>
+<body>
     
     
 <table width="400" height="311" border="0">
