--- a/iptv.html
+++ b/iptv.html
@@ -17,11 +17,7 @@ header-img: "img/bg5.jpg"
 </head>
 
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>点击复制链接</title>
-</head>
-<body>
+
     
     
 <table width="400" height="311" border="0">
@@ -32,7 +28,13 @@ header-img: "img/bg5.jpg"
     <td height="237"><a href="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center"><input type="text" size="20" id="url" value="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil">
+    <td>
+        <head>
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<title>点击复制链接</title>
+</head>
+<body>
+        <input type="text" size="20" id="url" value="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil">
 <script type="text/javascript">
 function copyUrl(){
  var url = document.getElementById("url").value;
@@ -409,7 +411,13 @@ function copyUrl(){
     <td height="237"><a href="http://125.88.94.135:30001/PLTV/88888905/224/3221227997/10000100000000060000000006912176_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/L4K.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center"><input type="text" size="20" id="url" value="http://125.88.94.135:30001/PLTV/88888905/224/3221227997/10000100000000060000000006912176_0.smil">
+    <td>
+        <head>
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<title>点击复制链接</title>
+</head>
+<body>
+        <input type="text" size="20" id="url" value="http://125.88.94.135:30001/PLTV/88888905/224/3221227997/10000100000000060000000006912176_0.smil">
 <script type="text/javascript">
 function copyUrl(){
  var url = document.getElementById("url").value;
