--- a/iptv.html
+++ b/iptv.html
@@ -24,8 +24,7 @@ header-img: "img/bg5.jpg"
   <tr>
     <td width="397"><div align="center">廣東體育</div></td>
   </tr>
-  <tr>
-    <td height="237"><a href="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
+  <tr><div align="center"><td height="237"><a href="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td>
@@ -407,8 +406,7 @@ function copyUrl(){
   <tr>
     <td width="397"><div align="center">愛上4K</div></td>
   </tr>
-  <tr>
-    <td height="237"><a href="http://125.88.94.135:30001/PLTV/88888905/224/3221227997/10000100000000060000000006912176_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/L4K.jpg" width="400" height="400" /></a></td>
+  <tr><div align="center"><td height="237"><a href="http://125.88.94.135:30001/PLTV/88888905/224/3221227997/10000100000000060000000006912176_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/L4K.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td>
@@ -517,7 +515,7 @@ function copyUrl(){
     repo: '{{site.gitalk.repo}}',
     owner: '{{site.gitalk.owner}}',
     admin: ['{{site.gitalk.admin}}'],
-    distractionFreeMode: {{site.gitalk.distractionFreeMode}},
+
     id: 'about',
     });
     gitalk.render('gitalk-container');
