--- a/iptv.html
+++ b/iptv.html
@@ -26,14 +26,8 @@ header-img: "img/bg5.jpg"
   </tr>
   <tr><div align="center"><td height="237"><a href="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
-  <tr>
-    <td>
-        <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>点击复制链接</title>
-</head>
-<body>
-        <input type="text" size="20" id="url" value="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil">
+
+ <td><div align="center"><input type="text" size="20" id="url" value="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil">
 <script type="text/javascript">
 function copyUrl(){
  var url = document.getElementById("url").value;
@@ -95,10 +89,6 @@ function copyUrl(){
 
 
 
-
-
-
-
 <table width="400" height="311" border="0">
   <tr>
     <td width="397"><div align="center">CCTV-5</div></td>
@@ -107,30 +97,22 @@ function copyUrl(){
     <td height="237"><a href="http://223.110.243.149/PLTV/3/224/3221227166/index.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
-    <td><div align="center">穩定</div></td>
+    <td><div align="center">延遲2分鐘左右</div></td>
   </tr>
 </table>
 </body>
 </html>
 
 
+
 <table width="400" height="311" border="0">
   <tr>
     <td width="397"><div align="center">CCTV-5+</div></td>
   </tr>
+  <tr><div align="center"><td height="237"><a href="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5p.jpg" width="400" height="400" /></a></td>
+</tr>
   <tr>
-    <td height="237"><a href="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5p.jpg" width="400" height="400" /></a></td>
-  </tr>
-  <tr>
-    <td><div align="center"><input type="text" size="20" id="url" value="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil">
-<script type="text/javascript">
-function copyUrl(){
- var url = document.getElementById("url").value;
- window.clipboardData.setData("Text",url);
- alert("复制链接成功！");
-}
-</script>
-<input type="button" value="复制链接" onClick="url.select();document.execCommand('Copy')">
+    <td><div align="center">需複製連結</div></td>
   </tr>
 </table>
 </body>
@@ -407,28 +389,13 @@ function copyUrl(){
     <td width="397"><div align="center">愛上4K</div></td>
   </tr>
   <tr><div align="center"><td height="237"><a href="http://125.88.94.135:30001/PLTV/88888905/224/3221227997/10000100000000060000000006912176_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/L4K.jpg" width="400" height="400" /></a></td>
-  </tr>
+</tr>
   <tr>
-    <td>
-        <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>点击复制链接</title>
-</head>
-<body>
-        <input type="text" size="20" id="url" value="http://125.88.94.135:30001/PLTV/88888905/224/3221227997/10000100000000060000000006912176_0.smil">
-<script type="text/javascript">
-function copyUrl(){
- var url = document.getElementById("url").value;
- window.clipboardData.setData("Text",url);
- alert("复制链接成功！");
-}
-</script>
-<input type="button" value="复制链接" onClick="url.select();document.execCommand('Copy')">
+    <td><div align="center">需複製連結</div></td>
   </tr>
 </table>
 </body>
 </html>
-
 
 <table width="400" height="311" border="0">
   <tr>
