--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ header-img: "img/bg1.jpg"
 <div class="zh post-container">
 
 <audio autoplay="autoplay">
-  <source src="http://dl.stream.qqmusic.qq.com/C400003TN3vS3T18c2.m4a?vkey=D113DD94A72AE9340F0DE625FE1F8A0DFCF9B50716FEF99B67252C5C22469CE8742AF8A24DF8CE04899450D2490C79556395769BB660C2B4&guid=1958059210&uin=0&fromtag=66" />
+  <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/Anything%20Could%20Happen.mp3" />
 </audio>
 
     <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
