--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ header-img: "img/bg1.jpg"
 <div class="zh post-container">
 
 <audio autoplay="autoplay">
-  <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/Anything%20Could%20Happen.mp3" />
+  <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/CGBC.mp3" />
 </audio>
 
     <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
