--- a/movie.html
+++ b/movie.html
@@ -20,7 +20,7 @@ header-img: "img/bg6.jpg"
 
 <table width="400" border="0">
   <tr>
-    <td><div align="center">G.E.M鄧紫棋 - 錯過不錯 Happen</td>
+    <td><div align="center">G.E.M鄧紫棋 - 錯過不錯</td>
   </tr>
   <tr>
     <td><div align="center"><audio controls>
